[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/test/save_load_demo.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/components/ui/composition_browser.tscn" id="2"]

[node name="SaveLoadDemo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "New Composition"

[node name="SaveButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Save"

[node name="AutosaveButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Autosave"

[node name="RefreshButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Refresh List"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 400

[node name="CompositionInfo" type="RichTextLabel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)
bbcode_enabled = true

[node name="LayerPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/LayerPanel"]
layout_mode = 2
text = "Layers:"

[node name="LayerList" type="ItemList" parent="VBoxContainer/HSplitContainer/LayerPanel"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(300, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LayerPanel"]
layout_mode = 2

[node name="AddLayerButton" type="Button" parent="VBoxContainer/HSplitContainer/LayerPanel/HBoxContainer"]
layout_mode = 2
text = "Add Test Layer"

[node name="RemoveLayerButton" type="Button" parent="VBoxContainer/HSplitContainer/LayerPanel/HBoxContainer"]
layout_mode = 2
text = "Remove Layer"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Saved Compositions:"

[node name="CompositionBrowser" parent="VBoxContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusBar"]
layout_mode = 2
text = "Ready"

[node name="SaveDialog" type="AcceptDialog" parent="."]
title = "Save Composition"
size = Vector2i(400, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="SaveDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="NameLabel" type="Label" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameInput" type="LineEdit" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
placeholder_text = "Composition name..."

[node name="AuthorLabel" type="Label" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
text = "Author:"

[node name="AuthorInput" type="LineEdit" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
placeholder_text = "Your name..."

[node name="DescriptionLabel" type="Label" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionInput" type="TextEdit" parent="SaveDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Optional description..."